# RType

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  build.bat  build.sh  buildserver.sh  conanfile.txt  docker-compose.yml  main.cpp  r-type_client  test.cfg  tmp.txt  windows.bat
.github/workflows/: build.yml  build_ecs.yml  build_release.yml  build_test.yml  check_build.yml  check_build_server.yml  check_server_build.yml  client_build.yml  docker-check.yml  release.yml
Client/: Client.cpp  Client.hpp  ClientEncaps.hpp  ClientEvents.hpp  main.cpp
Client/Button/: Button.cpp  Button.hpp  ButtonList.cpp  ButtonList.hpp
Client/Hud/: Hud.cpp  Hud.hpp
Client/LifeBar/: LifeBar.cpp  LifeBar.hpp
Client/Menu/: BaseMenu.cpp  BaseMenu.hpp  Menu.cpp  Menu.hpp  RoomEditor.cpp  RoomEditor.hpp  RoomSelector.cpp  RoomSelector.hpp  Spinner.cpp  Spinner.hpp
Client/MessagePanel/: MessagePanel.cpp  MessagePanel.hpp
Client/Parallax/: Parallax.cpp  Parallax.hpp  ParallaxDragon.cpp  ParallaxDragon.hpp  ParallaxGnome.cpp  ParallaxGnome.hpp
Client/PopUp/: PopUp.cpp  PopUp.hpp
Client/Prediction/: Prediction.hpp
Client/ResultsScreen/: ResultsScreen.cpp  ResultsScreen.hpp
Client/SoundPlayer/: SoundPlayer.cpp  SoundPlayer.hpp
Client/Texture/: Texture.hpp
Components/: AIShoot.hpp  ClockTimer.hpp  Controlable.hpp  Drawable.hpp  Health.hpp  Hitbox.hpp  Inputs.hpp  IsReady.hpp  Moveable.hpp  Position.hpp  Score.hpp  Shoot.hpp  State.hpp  Vector2d.hpp
Core/: Core.cpp  Core.hpp
ECS/Components/: ClockTimer.hpp  Health.hpp  Inputs.hpp  Moveable.hpp  Position.hpp  Score.hpp  Shoot.hpp  State.hpp
ECS/Entity/: Bydos.hpp  Coin.cpp  Coin.hpp  Dragon.cpp  Dragon.hpp  DragonShot.hpp  Genie.cpp  Genie.hpp  GenieShot.cpp  GenieShot.hpp  IEntity.hpp  Mermaid.cpp  Mermaid.hpp  MermaidShot.hpp  PiercingShotEntity.cpp  PiercingShotEntity.hpp  Player.cpp  Player.hpp  ShotEntity.cpp  ShotEntity.hpp  Tourre.hpp
ECS/Systems/: BydosSystem.cpp  BydosSystem.hpp  CoinSystem.cpp  DragonShotSystem.cpp  DragonShotSystem.hpp  DragonSystem.cpp  DragonSystem.hpp  GenieShotSystem.cpp  GenieShotSystem.hpp  GenieSystem.cpp  GenieSystem.hpp  MermaidShotSystem.cpp  MermaidShotSystem.hpp  MermaidSystem.cpp  MermaidSystem.hpp  PlayerSystem.cpp  PlayerSystem.hpp  TourreSystem.cpp  TourreSystem.hpp
ECS/Systems/Subsystems/: AIShoot.cpp  HitBox.hpp  InputSystem.cpp  MovementSystem.hpp  PiercingShotSystem.hpp  PredictShoot.cpp  PredictShoot.hpp  ShotSystem.hpp
Entity/: Bonus.cpp  Bonus.hpp  Bydos.cpp  Bydos.hpp  Dragon.hpp  DragonShot.cpp  EntityType.hpp  Genie.cpp  Genie.hpp  IEntity.hpp  Mermaid.hpp  MermaidShot.cpp  MermaidShot.hpp  PiercingShotEntity.cpp  PiercingShotEntity.hpp  Player.cpp  Player.hpp  ShootingEnnemy.cpp  ShootingEnnemy.hpp  ShotEntity.cpp  ShotEntity.hpp  StaticEnemy.cpp  StaticEnemy.hpp  Tourre.cpp  Tourre.hpp  Walls.cpp  Walls.hpp
EntityTypes/: EntityTypes.cpp  EntityTypes.hpp
LevelEdit/: LevelEdit.cpp
Sockets/includes/: MessageParsed.hpp  MessageSendedQueue.hpp  PacketTracker.hpp  SocketClient.hpp  SocketHandler.hpp  SocketServer.hpp
Sockets/sources/: MessageParsed.cpp  MessageSendedQueue.cpp  PacketTracker.cpp  SocketHandler.cpp  tmpMain.cpp
Systems/: Bydos.cpp  Bydos.hpp  BydosSystem.cpp  BydosSystem.hpp  CoinSystem.hpp  GenieSystem.cpp  GenieSystem.hpp  MermaidShotSystem.cpp  MermaidSystem.cpp  MermaidSystem.hpp  PlayerSystem.cpp  PlayerSystem.hpp  Tourre.cpp  Tourre.hpp  TourreSystem.cpp  TourreSystem.hpp
Systems/Subsystems/: AIShoot.cpp  AIShoot.hpp  DrawSystem.cpp  DrawSystem.hpp  HitBox.cpp  HitBox.hpp  InputSystem.cpp  InputSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  PiercingShotSystem.cpp  PiercingShotSystem.hpp  PredictShoot.cpp  ShotSystem.cpp  ShotSystem.hpp  StateSystem.cpp  StateSystem.hpp
Visitor/: IVisitor.hpp  PredictVisitor.hpp  SystemVisitor.hpp
client/: Client.cpp  Client.hpp  component.hpp  entity.hpp  main.cpp  registry.hpp  sparse_array.hpp
clientTest/: clientTest.cpp
gameLoop/: GameLoop.cpp  GameLoop.hpp  IGameLoop.hpp
gameLoop/RTypeGameLoop/: RTypeGameLoop.cpp  RTypeGameLoop.hpp
newClient/: Client.cpp  Client.hpp
roomController/includes/: RoomController.hpp
roomController/sources/: RoomController.cpp  main.cpp
server/: CMakeLists.txt  Makefile
server/includes/: ComCodes.hpp  CoreServer.hpp  EntityTypes.hpp  Error.hpp  Parser.hpp  Room.hpp  ThreadPool.hpp  Worker.hpp
server/sources/: CoreServer.cpp  Parser.cpp  Room.cpp  ThreadPool.cpp  main.cpp
